--- a/.htaccess
+++ b/.htaccess
@@ -14,3 +14,4 @@ RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
 RewriteRule ^register/([0-9a-zA-Z-_]+)? register.php?status=$1 [L,QSA]
 RewriteRule ^login/([0-9a-zA-Z-_]+)? login.php?status=$1 [L,QSA]
 RewriteRule ^business/([0-9a-zA-Z-_]+)? business.php?status=$1 [L,QSA]
+RewriteRule ^profileEdit/([0-9a-zA-Z-_]+)? profileEdit.php?status=$1 [L,QSA]
